# fakely-live

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/: README.md
.github/workflows/: api-build.yml  frames-handler-build.yml  ui-build.yml
api/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
api/scripts/: run_linters.sh
api/src/: config.py  main.py  mask.py  utils.py
api/src/api/: __init__.py  main.py
api/src/faces/: Jennifer Aniston.jfif
api/src/web_rtc/: __init__.py  _host_replace.py  buffer.py  main.py  stream.py
frames-handler/: Dockerfile  pyproject.toml
frames-handler/scripts/: run_linters
frames-handler/src/: buffer.py  config.py  main.py  maks.py  utils.py
frames-handler/src/face_swapper/: main.py
frames-handler/src/worker/: main.py  tasks.py
scripts/: build.sh
ui/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/nginx/: nginx.conf
ui/nginx/ssl/: selfsigned.crt  selfsigned.key
ui/public/: offer.docx
ui/scripts/: buildAndSaveImages
ui/src/: ApiClient.ts  App.css  App.tsx  config.ts  customTypes.ts  vite-env.d.ts
ui/src/components/button-block/: ButtonBlock.css  ButtonBlock.tsx
ui/src/components/logo/: logo.css  logo.tsx
ui/src/components/masks/: Masks.css  Masks.tsx
ui/src/components/offer/: Offer.css  Offer.tsx  offer.html
ui/src/components/panel/: Panel.css  Panel.tsx
ui/src/components/stream/: Stream.css  Stream.tsx  WebRtc.ts
ui/src/utils/: recordVideo.ts  utils.ts
